{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 171,
  "lineage": "1b39e9b4-ac06-f77a-1dac-544cb3f7bfa8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "Docker_IP_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-035c5dc086849b5de",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-02c0ded3fa026bc72",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "PAADEU2_docker_server"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-02c0ded3fa026bc72",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "PAADEU2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0824e29024748411e",
            "private_dns": "ip-10-0-2-40.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0186a338112b810c8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016d882a0078ddf81",
            "tags": {
              "Name": "PAADEU2_docker_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01a625bd89ee7d4b5"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "PAADEU2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c02023992a785470",
            "association_id": "eipassoc-0da8318ba728dc8b3",
            "domain": "vpc",
            "id": "eipalloc-0c02023992a785470",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0648dbc688c7e438b",
            "private_dns": "ip-10-0-1-103.eu-west-2.compute.internal",
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-18-133-49-0.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.49.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PAADEU2_eip"
            },
            "tags_all": {
              "Name": "PAADEU2_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PAADEU2_ansible_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035c5dc086849b5de",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-05d8d31477d8b416c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PAADEU2-Ansible-Node-profile",
            "id": "i-05d8d31477d8b416c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PAADEU2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d54e8b8b06dd55f3",
            "private_dns": "ip-10-0-4-74.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a23b253ed24544c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9b526d55c00f6cd",
            "tags": {
              "Name": "PAADEU2_ansible_node"
            },
            "tags_all": {
              "Name": "PAADEU2_ansible_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-003be48c73922856e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.PAADEU2-Ansi-IAM-profile",
            "aws_key_pair.PAADEU2_pub_key",
            "aws_security_group.ansible_sg",
            "aws_subnet.SnPri2",
            "data.aws_instance.Docker_IP_address",
            "tls_private_key.PAADEU2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PAADEU2_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035c5dc086849b5de",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0d876d12fe1c7b046",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d876d12fe1c7b046",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PAADEU2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3dd14df455610ee",
            "private_dns": "ip-10-0-1-225.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.225",
            "public_ip": "3.9.18.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007a13e5dd406ae5a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bcbb39897b8307ff",
            "tags": {
              "Name": "PAADEU2_bastion_host"
            },
            "tags_all": {
              "Name": "PAADEU2_bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0452cf2c635c2b6c7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.PAADEU2_pub_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.SnPub1",
            "aws_vpc.PAADEU2_vpc",
            "tls_private_key.PAADEU2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PAADEU2_docker_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035c5dc086849b5de",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-02c0ded3fa026bc72",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c0ded3fa026bc72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PAADEU2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0824e29024748411e",
            "private_dns": "ip-10-0-2-40.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0186a338112b810c8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016d882a0078ddf81",
            "tags": {
              "Name": "PAADEU2_docker_server"
            },
            "tags_all": {
              "Name": "PAADEU2_docker_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a625bd89ee7d4b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.PAADEU2_pub_key",
            "aws_security_group.docker_sg",
            "aws_subnet.SnPri1",
            "aws_vpc.PAADEU2_vpc",
            "tls_private_key.PAADEU2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PPADEU2_jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb391cce7a602d1f",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0a39e6e45f51b0212",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a39e6e45f51b0212",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PAADEU2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-062db5454fc86057e",
            "private_dns": "ip-10-0-2-59.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0196a69eeadc43dd4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016d882a0078ddf81",
            "tags": {
              "Name": "PPADEU2_jenkins_server"
            },
            "tags_all": {
              "Name": "PPADEU2_jenkins_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a89a8951e40f3046"
            ]
          },
          "dependencies": [
            "aws_key_pair.PAADEU2_pub_key",
            "aws_security_group.jenkins_server_sg",
            "aws_subnet.SnPri1",
            "aws_vpc.PAADEU2_vpc",
            "tls_private_key.PAADEU2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PPADEU2_sonarqube_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb391cce7a602d1f",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0f9f95d4ed10cce64",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9f95d4ed10cce64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "PAADEU2_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ed68078e0c8a1f6",
            "private_dns": "ip-10-0-2-43.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd4657ef458d21f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016d882a0078ddf81",
            "tags": {
              "Name": "PPADEU2_sonarqube_server"
            },
            "tags_all": {
              "Name": "PPADEU2_sonarqube_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011bf7053974e2e96"
            ]
          },
          "dependencies": [
            "aws_key_pair.PAADEU2_pub_key",
            "aws_security_group.sonarqube_sg",
            "aws_subnet.SnPri1",
            "aws_vpc.PAADEU2_vpc",
            "tls_private_key.PAADEU2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:internet-gateway/igw-034ff6b15decf6987",
            "id": "igw-034ff6b15decf6987",
            "owner_id": "803077056902",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "PAADEU2-AutoDisc-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-AutoDisc-LB/63ca4ddd31a487a2",
            "arn_suffix": "app/PAADEU2-AutoDisc-LB/63ca4ddd31a487a2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "PAADEU2-AutoDisc-LB-604131884.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-AutoDisc-LB/63ca4ddd31a487a2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PAADEU2-AutoDisc-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0abae1c7fce155cf8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a9726466df22c357"
              },
              {
                "subnet_id": "subnet-0bcbb39897b8307ff"
              }
            ],
            "subnets": [
              "subnet-0a9726466df22c357",
              "subnet-0bcbb39897b8307ff"
            ],
            "tags": {
              "Environment": "PAADEU2-LB"
            },
            "tags_all": {
              "Environment": "PAADEU2-LB"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.docker_lb_sg",
            "aws_subnet.SnPub1",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "PAADEU2-Docker-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-Docker-LB/8f6dc4c2891b64dc",
            "arn_suffix": "app/PAADEU2-Docker-LB/8f6dc4c2891b64dc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "PAADEU2-Docker-LB-1981328794.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-Docker-LB/8f6dc4c2891b64dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PAADEU2-Docker-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0abae1c7fce155cf8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a9726466df22c357"
              },
              {
                "subnet_id": "subnet-0bcbb39897b8307ff"
              }
            ],
            "subnets": [
              "subnet-0a9726466df22c357",
              "subnet-0bcbb39897b8307ff"
            ],
            "tags": {
              "Environment": "PAADEU2-LB"
            },
            "tags_all": {
              "Environment": "PAADEU2-LB"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.docker_lb_sg",
            "aws_subnet.SnPub1",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "PAADEU2-Jenkins-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-Jenkins-LB/bb2cd883278600ea",
            "arn_suffix": "app/PAADEU2-Jenkins-LB/bb2cd883278600ea",
            "desync_mitigation_mode": "defensive",
            "dns_name": "PAADEU2-Jenkins-LB-1275103755.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-Jenkins-LB/bb2cd883278600ea",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PAADEU2-Jenkins-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0415e85511a1d8409"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a9726466df22c357"
              },
              {
                "subnet_id": "subnet-0bcbb39897b8307ff"
              }
            ],
            "subnets": [
              "subnet-0a9726466df22c357",
              "subnet-0bcbb39897b8307ff"
            ],
            "tags": {
              "Environment": "PAADEU2-LB"
            },
            "tags_all": {
              "Environment": "PAADEU2-LB"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.Jenkins_lb_sg",
            "aws_subnet.SnPub1",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "PAADEU2-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-LB/14ee55263355106e",
            "arn_suffix": "app/PAADEU2-LB/14ee55263355106e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "PAADEU2-LB-1173760763.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-LB/14ee55263355106e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PAADEU2-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e0b82c470081f4c8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a9726466df22c357"
              },
              {
                "subnet_id": "subnet-0bcbb39897b8307ff"
              }
            ],
            "subnets": [
              "subnet-0a9726466df22c357",
              "subnet-0bcbb39897b8307ff"
            ],
            "tags": {
              "Environment": "PAADEU2-LB"
            },
            "tags_all": {
              "Environment": "PAADEU2-LB"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.sonarqube_lb_sg",
            "aws_subnet.SnPub1",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "PAAEU2_AutoDisc_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:listener/app/PAADEU2-AutoDisc-LB/63ca4ddd31a487a2/5d352527bf0554e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-AutoDisc-lb-tg/4ef07163c1e813c2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:listener/app/PAADEU2-AutoDisc-LB/63ca4ddd31a487a2/5d352527bf0554e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-AutoDisc-LB/63ca4ddd31a487a2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.PAADEU2-AutoDisc-LB",
            "aws_lb_target_group.PAADEU2-AutoDisc-lb-tg",
            "aws_security_group.docker_lb_sg",
            "aws_subnet.SnPub1",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "PAAEU2_Docker_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:listener/app/PAADEU2-Docker-LB/8f6dc4c2891b64dc/8f1543f80251383c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Docker-lb-tg/ee7c61c1dfa2e14e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:listener/app/PAADEU2-Docker-LB/8f6dc4c2891b64dc/8f1543f80251383c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-Docker-LB/8f6dc4c2891b64dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.PAADEU2-Docker-LB",
            "aws_lb_target_group.PAADEU2-Docker-lb-tg",
            "aws_security_group.docker_lb_sg",
            "aws_subnet.SnPub1",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "PAAEU2_Jenkins_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:listener/app/PAADEU2-Jenkins-LB/bb2cd883278600ea/ef7ac51df908ac09",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Jenkins-lb-tg/aa966d72bf777896",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:listener/app/PAADEU2-Jenkins-LB/bb2cd883278600ea/ef7ac51df908ac09",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-Jenkins-LB/bb2cd883278600ea",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.PAADEU2-Jenkins-LB",
            "aws_lb_target_group.PAADEU2-Jenkins-lb-tg",
            "aws_security_group.Jenkins_lb_sg",
            "aws_subnet.SnPub1",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "PAAEU2_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:listener/app/PAADEU2-LB/14ee55263355106e/da850bbc076c9259",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-lb-tg/47e9a7ae8af2a940",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:listener/app/PAADEU2-LB/14ee55263355106e/da850bbc076c9259",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:loadbalancer/app/PAADEU2-LB/14ee55263355106e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.PAADEU2-LB",
            "aws_lb_target_group.PAADEU2-lb-tg",
            "aws_security_group.sonarqube_lb_sg",
            "aws_subnet.SnPub1",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "PAADEU2-AutoDisc-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-AutoDisc-lb-tg/4ef07163c1e813c2",
            "arn_suffix": "targetgroup/PAADEU2-AutoDisc-lb-tg/4ef07163c1e813c2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-AutoDisc-lb-tg/4ef07163c1e813c2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PAADEU2-AutoDisc-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "PAADEU2-Docker-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Docker-lb-tg/ee7c61c1dfa2e14e",
            "arn_suffix": "targetgroup/PAADEU2-Docker-lb-tg/ee7c61c1dfa2e14e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Docker-lb-tg/ee7c61c1dfa2e14e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PAADEU2-Docker-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "PAADEU2-Jenkins-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Jenkins-lb-tg/aa966d72bf777896",
            "arn_suffix": "targetgroup/PAADEU2-Jenkins-lb-tg/aa966d72bf777896",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Jenkins-lb-tg/aa966d72bf777896",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PAADEU2-Jenkins-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "PAADEU2-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-lb-tg/47e9a7ae8af2a940",
            "arn_suffix": "targetgroup/PAADEU2-lb-tg/47e9a7ae8af2a940",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-lb-tg/47e9a7ae8af2a940",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "PAADEU2-lb-tg",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "PAADEU2-jenkins-lb-tgroup-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Jenkins-lb-tg/aa966d72bf777896-20221108223834473600000007",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Jenkins-lb-tg/aa966d72bf777896",
            "target_id": "i-0a39e6e45f51b0212"
          },
          "dependencies": [
            "aws_instance.PPADEU2_jenkins_server",
            "aws_key_pair.PAADEU2_pub_key",
            "aws_lb_target_group.PAADEU2-Jenkins-lb-tg",
            "aws_security_group.jenkins_server_sg",
            "aws_subnet.SnPri1",
            "aws_vpc.PAADEU2_vpc",
            "tls_private_key.PAADEU2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "PAADEU2-lb-tgroup-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Docker-lb-tg/ee7c61c1dfa2e14e-20221108223834620600000008",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-Docker-lb-tg/ee7c61c1dfa2e14e",
            "target_id": "i-02c0ded3fa026bc72"
          },
          "dependencies": [
            "aws_instance.PAADEU2_docker_server",
            "aws_key_pair.PAADEU2_pub_key",
            "aws_lb_target_group.PAADEU2-Docker-lb-tg",
            "aws_security_group.docker_sg",
            "aws_subnet.SnPri1",
            "aws_vpc.PAADEU2_vpc",
            "tls_private_key.PAADEU2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "PAADEU2-sonatqube-lb-tgroup-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-lb-tg/47e9a7ae8af2a940-20221108223854387300000009",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:803077056902:targetgroup/PAADEU2-lb-tg/47e9a7ae8af2a940",
            "target_id": "i-0f9f95d4ed10cce64"
          },
          "dependencies": [
            "aws_instance.PPADEU2_sonarqube_server",
            "aws_key_pair.PAADEU2_pub_key",
            "aws_lb_target_group.PAADEU2-lb-tg",
            "aws_security_group.sonarqube_sg",
            "aws_subnet.SnPri1",
            "aws_vpc.PAADEU2_vpc",
            "tls_private_key.PAADEU2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c02023992a785470",
            "connectivity_type": "public",
            "id": "nat-0e850e76c5cd24d86",
            "network_interface_id": "eni-0648dbc688c7e438b",
            "private_ip": "10.0.1.103",
            "public_ip": "18.133.49.0",
            "subnet_id": "subnet-0bcbb39897b8307ff",
            "tags": {
              "Name": "ngw"
            },
            "tags_all": {
              "Name": "ngw"
            }
          },
          "dependencies": [
            "aws_eip.PAADEU2_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.SnPub1",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PAADEU2_Prv_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:route-table/rtb-09679abd6713f5184",
            "id": "rtb-09679abd6713f5184",
            "owner_id": "803077056902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e850e76c5cd24d86",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PAADEU2_Prv_RT"
            },
            "tags_all": {
              "Name": "PAADEU2_Prv_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.PAADEU2_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.SnPub1",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PAADEU2_Pub_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:route-table/rtb-042b2ededae65b6d7",
            "id": "rtb-042b2ededae65b6d7",
            "owner_id": "803077056902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034ff6b15decf6987",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PAADEU2_Pub_RT"
            },
            "tags_all": {
              "Name": "PAADEU2_Pub_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SnPri1_association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4a3be1a8faab8e1",
            "route_table_id": "rtb-09679abd6713f5184",
            "subnet_id": "subnet-016d882a0078ddf81"
          },
          "dependencies": [
            "aws_eip.PAADEU2_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.PAADEU2_Prv_RT",
            "aws_subnet.SnPri1",
            "aws_subnet.SnPub1",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SnPri2_association4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1a5052c870d91f6",
            "route_table_id": "rtb-09679abd6713f5184",
            "subnet_id": "subnet-0a9b526d55c00f6cd"
          },
          "dependencies": [
            "aws_eip.PAADEU2_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.PAADEU2_Prv_RT",
            "aws_subnet.SnPri2",
            "aws_subnet.SnPub1",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SnPub1_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f344446a931686a9",
            "route_table_id": "rtb-042b2ededae65b6d7",
            "subnet_id": "subnet-0bcbb39897b8307ff"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.PAADEU2_Pub_RT",
            "aws_subnet.SnPub1",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SnPub2_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f60f4975a70d14c2",
            "route_table_id": "rtb-042b2ededae65b6d7",
            "subnet_id": "subnet-0a9726466df22c357"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.PAADEU2_Pub_RT",
            "aws_subnet.SnPub2",
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0415e85511a1d8409",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0415e85511a1d8409",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Jenkins_lb_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins_lb_sg"
            },
            "tags_all": {
              "Name": "Jenkins_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-003be48c73922856e",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003be48c73922856e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible_sg"
            },
            "tags_all": {
              "Name": "ansible_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0452cf2c635c2b6c7",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0452cf2c635c2b6c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0abae1c7fce155cf8",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abae1c7fce155cf8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "docker_lb_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker_lb_sg"
            },
            "tags_all": {
              "Name": "docker_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-01a625bd89ee7d4b5",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a625bd89ee7d4b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "HTTP",
                "from_port": 8085,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8085
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "docker",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "docker_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker_sg"
            },
            "tags_all": {
              "Name": "docker_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0a89a8951e40f3046",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a89a8951e40f3046",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "HTTP",
                "from_port": 8085,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8085
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins_server_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pvt_server_sg"
            },
            "tags_all": {
              "Name": "pvt_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0e0b82c470081f4c8",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0b82c470081f4c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sonar",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_lb_sg"
            },
            "tags_all": {
              "Name": "sonarqube_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-011bf7053974e2e96",
            "description": "Allow sonarqube traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011bf7053974e2e96",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "sonarqube",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "sonarqube",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube_sg",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_sg"
            },
            "tags_all": {
              "Name": "sonarqube_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SnPri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-016d882a0078ddf81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016d882a0078ddf81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SnPri1"
            },
            "tags_all": {
              "Name": "SnPri1"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SnPri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-0a9b526d55c00f6cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9b526d55c00f6cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SnPri2"
            },
            "tags_all": {
              "Name": "SnPri2"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SnPub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-0bcbb39897b8307ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcbb39897b8307ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SnPub1"
            },
            "tags_all": {
              "Name": "SnPub1"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SnPub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-0a9726466df22c357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9726466df22c357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SnPub2"
            },
            "tags_all": {
              "Name": "SnPub2"
            },
            "vpc_id": "vpc-05dc38a2c6dbb2cca"
          },
          "dependencies": [
            "aws_vpc.PAADEU2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PAADEU2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:vpc/vpc-05dc38a2c6dbb2cca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03529129a50204a2a",
            "default_route_table_id": "rtb-0eb20983119d47a0c",
            "default_security_group_id": "sg-00d92c82e5eff2c13",
            "dhcp_options_id": "dopt-0eceeeb0168d700fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05dc38a2c6dbb2cca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb20983119d47a0c",
            "owner_id": "803077056902",
            "tags": {
              "Name": "PAADEU2_vpc"
            },
            "tags_all": {
              "Name": "PAADEU2_vpc"
            }
          }
        }
      ]
    }
  ]
}